2003-09-14 Damien McGinnes 

	* testPhys.cpp: added a rudimentary physics model to do a more useful
	  test of the ray-terrain intersection
	* Mercator/Intersect.cpp,h: some cleanups for bugs found during the
	  above test

2003-09-13 Damien McGinnes 

	* TODO: cleaned up a few old TODOs
        
2003-09-13 Damien McGinnes 

	* Mercator/Intersect.cpp,h: some intersection code cleanup
	  ray intersection now returns the point of intersection
	  and normal.
	* Mercator/Segment.cpp: fixed normal for intersection on diagonal
	  of a cell (between the two triangles of the quad) also normalised
	  the returned normal

2003-09-12 Damien McGinnes 

	* Mercator/Intersect.cpp,h: maybe finished ray intersection
	  needs more testing
	* tests/testIntersect.cpp: added more tests

2003-09-11 Damien McGinnes 

	* Mercator/Intersect.cpp,h: added ray intersection with terrain
	  not complete yet, ray/triangle tests not added
	* tests/testIntersect.cpp: added ray intersection test -  not finished

2003-09-10 Damien McGinnes 

	* Mercator/Intersect.cpp,h: added point intersection with terrain
	  and height over terrain functions

2003-09-10 Damien McGinnes 

	* Mercator/Intersect.cpp,h: added files for axisbox intersection
	  with terrain
	* tests/testIntersect.cpp: added files for intersection unit tests

2003-09-06 Damien McGinnes 

	* Mercator/Surface.cpp: fixed a segfault in invalidate; slight
	  cleanup to the rounding code in clipToSegment.

2003-09-03  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Surface.h: Use <climits> to get the max value of
	  a char.

	* Mercator/Surface.cpp, Mercator/Buffer.h, Mercator/Buffer_impl.h:
	  Modify buffers and thus surfaces to handle their memory
	  dynamically, providing facilities for allocating and
	  deleting the buffer.

	* Mercator/Segment.h, Mercator/Segment.cpp: Implement easier
	  memory management, getting rid of the flags for points and
	  normals, using the value of the pointer instead.